--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
     image: rotombot:latest
     restart: unless-stopped
     env_file: .env
+    environment:
+      - TZ=America/New_York
     volumes:
       - rotombot-db:/db
